--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} 
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +35,32 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.pbtn {
+  border: 1px solid #F07373;
+  border-radius: 20px;
+  border: 1px solid #F07373;
+  background-color: #F07373;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: bold;
+  padding: 5% 10%;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  width: 70%;
+  margin: 3%;
+  transition: transform 80ms ease-in;
+  &:active{
+      transform: scale(0.95);
+  }
+  &:focus {
+      outline: none;
+  }
+}
+
+
+
+.center {
+  justify-content: center;
 }
